--- a/src/styles/editor.css
+++ b/src/styles/editor.css
@@ -4,6 +4,10 @@
     @apply outline-primary;
   }
 
+  .tippy-box {
+    max-width: 600px !important;
+  }
+
   .tiptap {
     @apply caret-black dark:caret-white outline-0 px-4 py-2 sm:px-20 sm:py-6;
     min-height: 180px;
